# canns-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: comprehensive_benchmark.py
crates/ripser/: Cargo.toml
crates/ripser/src/: lib.rs
crates/ripser/src/core/: algorithm.rs  lockfree.rs  reduction.rs
crates/spatial/: Cargo.toml
crates/spatial/src/: lib.rs
docs/: SPATIAL_NAV_MODULE_DESIGN.md
example/: spatial_plotting_demo.py  trajectory_comparison.py  try.py
python/canns_lib/: __init__.py  _version.py
python/canns_lib/ripser/: __init__.py  _version.py
python/canns_lib/spatial/: __init__.py
python/canns_ripser/: __init__.py  _version.py
src/: cocycles.rs  complex.rs  core.rs  lib.rs  matrix.rs  metrics.rs  persistence.rs  python.rs  reduction.rs  ripser.rs
src/core/: algorithm.rs  assembly.rs  mod.rs  reduction.rs
src/matrix/: dense.rs  mod.rs  sparse.rs  traits.rs
src/spatial/: agent.rs  environment.rs  geometry.rs  mod.rs  state.rs  utils.rs
src/types/: mod.rs  primitives.rs  results.rs
src/utils/: binomial.rs  field.rs  mod.rs  union_find.rs
tests/: test_accuracy.py  test_basic.py  test_complex_topology.py  test_error_handling.py  test_implementation_quality.py  test_ripser_comparison.py  test_spatial_basic.py
