[package]
name = "canns-lib"
version = "0.5.0"
edition = "2021"
description = "High-performance computational acceleration library for CANNS, providing optimized implementations for topological data analysis and neural network computations"
license = "Apache-2.0"
authors = ["Sichao He <sichaohe@outlook.com>"]
homepage = "https://github.com/routhleck/canns-lib"
repository = "https://github.com/routhleck/canns-lib"
keywords = ["canns", "topology", "acceleration", "tda", "neural-networks"]
categories = ["mathematics", "science"]
readme = "README.md"

[lib]
name = "canns_lib"
crate-type = ["cdylib"]
path = "crates/ripser/src/lib.rs"

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
numpy = "0.24.0"
ndarray = "0.16"
sprs = "0.11"
rayon = { version = "1.8", optional = true }
thiserror = "1.0"
num-traits = "0.2"
indexmap = "2.0"
rustc-hash = "1.1"
typed-arena = "2.0"
mimalloc = { version = "0.1.43", default-features = false }
pinboard = "2.2"

[build-dependencies]
pyo3-build-config = "0.20"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.release.build-override]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = ["parallel"]
parallel = ["rayon"]
debug = []