[package]
name = "canns-lib"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Sichao He <sichaohe@outlook.com>"]
homepage = "https://github.com/routhleck/canns-lib"
repository = "https://github.com/routhleck/canns-lib"
readme = "README.md"
description = "High-performance computational acceleration library for CANNS, providing optimized implementations for topological data analysis and neural network computations"
keywords = ["canns", "topology", "acceleration", "tda", "neural-networks"]
categories = ["mathematics", "science"]

[lib]
name = "canns_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.24.2" }
numpy = "0.24.0"
ndarray = "0.16"
rayon = { version = "1.8", optional = true }
rustc-hash = "1.1"
mimalloc = { version = "0.1.43", default-features = false }
pinboard = "2.2"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"  # Used by Rayleigh/normal CDF conversion in spatial/utils.rs

[build-dependencies]
pyo3-build-config = "0.20"

[features]
default = ["parallel"]
parallel = ["rayon"]
# Required when building the cdylib for Python (i.e. via `maturin develop` or
# `cargo build --features extension-module`). Must NOT be set for plain
# `cargo test`/`cargo run` on macOS or Linux, otherwise the linker can't find
# Python runtime symbols. Maturin enables this feature automatically.
# See https://pyo3.rs/v0.24.2/faq#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
extension-module = ["pyo3/extension-module"]
debug = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.release.build-override]
opt-level = 3

[profile.dev]
opt-level = 1
